--- a/task6/task6.html
+++ b/task6/task6.html
@@ -15,14 +15,26 @@
         <img src="image/1.png" class="icon1">
     </header>
     <div class="information">
-            <div class="place">所在地
-                <img src="image/8.png" class="icon2">
+            <div class="place">
+                <select>
+                    <option >所在地</option>
+                    <option >山西</option>
+                    <option >河北</option>
+                </select>
             </div>
-            <div class="house">食宿
-                    <img src="image/8.png" class="icon2">
+            <div class="house">
+                <select>
+                    <option >食宿</option>
+                    <option >山西</option>
+                    <option >河北</option>
+                </select>
             </div>
-            <div class="patient">病人情况
-                    <img src="image/8.png" class="icon2">
+            <div class="patient">
+                <select>
+                    <option >病人情况</option>
+                    <option >不便活动</option>
+                    <option >躺床</option>
+                </select>
             </div>
     </div>
     
@@ -33,8 +45,10 @@
         </div>
         <div class="time">
             <span class="time2">2015-7-5 至 2015-7-12</span>
-            <span class="price">25元/小时</span>
-            <img src="image/7.png" class="icon4">
+            <div class="prices">
+                <span class="price">25元/小时</span>
+                <img src="image/7.png" class="icon4">
+            </div>
         </div>
         <div class="address">
             <img src="image/3.png" class="icon5">
@@ -49,8 +63,10 @@
     </div>
     <div class="time">
         <span class="time2">2015-7-5 至 2015-7-12</span>
-        <span class="price">25元/小时</span>
-        <img src="image/7.png" class="icon4">
+        <div class="prices">
+            <span class="price">25元/小时</span>
+            <img src="image/7.png" class="icon4">
+        </div>
     </div>
     <div class="address">
         <img src="image/3.png" class="icon5">
@@ -65,8 +81,10 @@
     </div>
     <div class="time">
         <span class="time2">2015-7-5 至 2015-7-12</span>
-        <span class="price">25元/小时</span>
-        <img src="image/7.png" class="icon4">
+        <div class="prices">
+            <span class="price">25元/小时</span>
+            <img src="image/7.png" class="icon4">
+        </div>
     </div>
     <div class="address">
         <img src="image/3.png" class="icon5">
@@ -81,8 +99,10 @@
     </div>
     <div class="time">
         <span class="time2">2015-7-5 至 2015-7-12</span>
-        <span class="price">25元/小时</span>
-        <img src="image/7.png" class="icon4">
+        <div class="prices">
+            <span class="price">25元/小时</span>
+            <img src="image/7.png" class="icon4">
+        </div>
     </div>
     <div class="address">
         <img src="image/3.png" class="icon5">
@@ -97,8 +117,10 @@
     </div>
     <div class="time">
         <span class="time2">2015-7-5 至 2015-7-12</span>
-        <span class="price">25元/小时</span>
-        <img src="image/7.png" class="icon4">
+        <div class="prices">
+            <span class="price">25元/小时</span>
+            <img src="image/7.png" class="icon4">
+        </div>
     </div>
     <div class="address">
         <img src="image/3.png" class="icon5">
@@ -113,8 +135,10 @@
     </div>
     <div class="time">
         <span class="time2">2015-7-5 至 2015-7-12</span>
-        <span class="price">25元/小时</span>
-        <img src="image/7.png" class="icon4">
+        <div class="prices">
+            <span class="price">25元/小时</span>
+            <img src="image/7.png" class="icon4">
+        </div>
     </div>
     <div class="address">
         <img src="image/3.png" class="icon5">
@@ -129,8 +153,10 @@
     </div>
     <div class="time">
         <span class="time2">2015-7-5 至 2015-7-12</span>
-        <span class="price">25元/小时</span>
-        <img src="image/7.png" class="icon4">
+        <div class="prices">
+            <span class="price">25元/小时</span>
+            <img src="image/7.png" class="icon4">
+        </div>
     </div>
     <div class="address">
         <img src="image/3.png" class="icon5">
