--- a/task7/index.html
+++ b/task7/index.html
@@ -31,11 +31,11 @@
                     <div class="form">白痴版</div>
                     <div class="players">有1133个用户正在玩此款游戏</div>
             </div>
-            <div>
-                <img src="image/dot.png" class="dot">
-                <img src="image/dot1.png" class="dot">
-                <img src="image/dot1.png" class="dot">
-                <img src="image/dot1.png" class="dot">
+            <div class="dot">
+                <span class="dot1">&ensp;</span>
+                <span class="dot2">&emsp;</span>
+                <span class="dot3">&emsp;</span>
+                <span class="dot4">&emsp;</span>
             </div>
         </div>
     </div>
