--- a/task7/vote.html
+++ b/task7/vote.html
@@ -17,7 +17,7 @@
         <span>发言讨论结束，请大家投票</span>
         <img src="image/4.png" class="play">
      <!--为了节约资源，测试用播放音频-->
-        <!-- <audio src="audio/财富自由.mp3" autoplay="autoplay" loop="loop" class="audio"> -->
+        <audio src="audio/财富自由.mp3" controls="controls" class="audio">
         </audio>
     </div>
     <img src="image/down.png" class="down">
