企业官网新功能的添加

--- a/task8/profession.html
+++ b/task8/profession.html
@@ -69,15 +69,15 @@
             <ul class="profession-items">
                 <li class="types-first">方向：</li>
                 <li class="types">全部</li>
-                <li class="types">前端开发</li>
-                <li class="types">后端开发</li>
+                <li class="types"><a class="go" href="#pro-one">前端开发</a></li>
+                <li class="types"><a class="go" href="#pro-two">后端开发</a></li>
                 <li class="types">移动开发</li>
-                <li class="types">整站开发</li>
-                <li class="types">运营维护</li>
+                <li class="types"><a class="go" href="#pro-three">整站开发</a></li>
+                <li class="types"><a class="go" href="#pro-four">运营维护</a></li>
             </ul>
         </div>
         <div class="container">
-            <h5 class="web-title">前端开发方向</h5>
+            <h5 class="web-title" id="pro-one">前端开发方向</h5>
             <div class="row row-cols-1 row-cols-md-3">
                 <div class="col mb-4 col-lg-4 col-md-6 card-zero">
                     <div class="card h-100 grid-box">
@@ -250,7 +250,7 @@
               </div>
         </div>
         <div class="container">
-            <h5 class="web-title">后端开发方向</h5>
+            <h5 class="web-title" id="pro-two">后端开发方向</h5>
             <div class="row row-cols-1 row-cols-md-3">
                 <div class="col mb-4 col-lg-4 col-md-6 card-zero">
                     <div class="card h-100 grid-box">
@@ -535,7 +535,7 @@
               </div>
         </div>
         <div class="container">
-            <h5 class="web-title">整站开发方向</h5>
+            <h5 class="web-title" id="pro-three">整站开发方向</h5>
             <div class="row row-cols-1 row-cols-md-3">
                 <div class="col mb-4 col-lg-4 col-md-6 card-zero">
                     <div class="card h-100 grid-box">
@@ -708,7 +708,7 @@
               </div>
         </div>
         <div class="container">
-            <h5 class="web-title">运维方向</h5>
+            <h5 class="web-title" id="pro-four">运维方向</h5>
             <div class="row row-cols-1 row-cols-md-3">
                 <div class="col mb-4 col-lg-4 col-md-6 card-zero">
                     <div class="card h-100 grid-box">
