--- a/js-task2/page1.html
+++ b/js-task2/page1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="/js1.js"></script>
+    <script src="./js1.js"></script>
     <link rel="stylesheet" href="css/page1.css">
     <title>游戏类型</title>
 </head>
