狼人杀小游戏实现

--- a/js-task2/page3.html
+++ b/js-task2/page3.html
@@ -32,6 +32,6 @@
         <!-- <input type="button" value="" class="check-copy" id="checked-copy">
         <input type="button" value="" class="check-copy-t" id="checked-copy-t"> -->
     </footer>
-    <script text="text/javascript" src="/js3.js"></script>
+    <script text="text/javascript" src="./js3.js"></script>
 </body>
 </html>
