--- a/js-task2/page5.html
+++ b/js-task2/page5.html
@@ -45,6 +45,6 @@
         <input type="button" class="footer-note" value="法官日志"></input>
     </footer>
     
-    <script src="js5.js"></script>
+    <script src="./js5.js"></script>
 </body>
 </html>
