--- a/js-task2/page7.html
+++ b/js-task2/page7.html
@@ -30,6 +30,6 @@
     <footer>
         <input type="button" class="footer-vote" value="确定">
     </footer> 
-    <script src="js5-1.js"></script>
+    <script src="./js5-1.js"></script>
 </body>
 </html>
