--- a/js-task2/page8.html
+++ b/js-task2/page8.html
@@ -39,6 +39,6 @@
     <footer>
         <input type="button" value="再来一局" class="footer-restart">
     </footer>
-    <script src="js5-2.js"></script>
+    <script src="./js5-2.js"></script>
 </body>
 </html>
