--- a/js-task2/page9.html
+++ b/js-task2/page9.html
@@ -27,6 +27,6 @@
             <input type="button" class="footer-back" value="返回">
         </div>
     </footer>
-    <script src="js5-3.js"></script>
+    <script src="./js5-3.js"></script>
 </body>
 </html>
