--- a/js-task2/page2.html
+++ b/js-task2/page2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/page2.css">
-    <script type="text/javascript" src="/js2.js"></script>
+    <script type="text/javascript" src="./js2.js"></script>
     <title>玩家分配</title>
 </head>
 <body>
