--- a/js-task2/page4.html
+++ b/js-task2/page4.html
@@ -27,6 +27,6 @@
             <input type="button" class="footer-start" value="开始游戏">
         </div>
     </footer>
-    <script src="js4.js"></script>
+    <script src="./js4.js"></script>
 </body>
 </html>
